# pt-bot

./: .gitignore  AGENTS.md  README.md  fix_xauth.sh  rebuild.sh  ros2_jazzy_fedora.sh
container/: fix_xauth.sh  rebuild.sh  ros2_jazzy_fedora.sh
docs/: architecture.md  cleanup_inventory.md  topics.md
install/: local_setup.sh  setup.sh
log/: latest_build
matlab_integration/: GUION_PRESENTACION.md  README.md  README_MATLAB.md  conectar_ros2.m  demo_camara.m  demo_cmdvel.m  demo_line_follower.m  (+2 more)
src/robot_control/: package.xml  setup.py
src/robot_control/config/: topics.yaml
src/robot_control/launch/: me5413_obstacle_world_launch.py  nuevo_modelo_line_follower_launch.py  sim_car.launch.py  sim_empty_world.launch.py  sim_empty_world_fricciones.launch.py  sim_empty_world_uniform.launch.py  sim_mecanum_launch.py  sim_tricycle_launch.py
src/robot_control/models/: THIRD_PARTY_NOTICES.md
src/robot_control/models/nuevo_carro/: model.config  model.sdf
src/robot_control/robot_control/: line_follower_node.py
src/robot_control/robot_control/control/: __init__.py  keyboard_teleop_node.py  simulink_router_node.py
src/robot_control/robot_control/interfaces/: __init__.py  ros_to_simulink_bridge.py  simulink_to_ros_bridge.py  topic_config.py
src/robot_control/robot_control/sensors/: __init__.py
src/robot_control/robot_control/utils/: __init__.py
src/robot_control/worlds/: me5413_obstacle_world.sdf  me5413_obstacle_world_full_backup.sdf  mundo_vacio.sdf  mundo_vacio_fricciones.sdf  mundo_vacio_uniforme.sdf  nuevo_modelo_line_follower.sdf  nuevo_mundo.sdf
(+28 files in other folders)
